Prevent inline code in tables from wrapping

--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -225,6 +225,9 @@ article.pytorch-article .wy-table-responsive table {
   table-layout: auto;
 }
 
+td code {
+  white-space: nowrap;
+}
 
 /* fixes for code line numbers */
 
